# pdf2md-dir-pipeline

./: .gitignore  LICENSE  README.md  dagster.yaml  pyproject.toml
data/: demo.md
pdf2md_pipeline/: definitions.py  hooks.py  io_managers.py  jobs.py  ops.py  resources.py  sensors.py
tests/: test_hook.py  test_io.py  test_ops.py  test_resource.py
