[project]
name = "pdf2md-dir-pipeline"
version = "0.1.0"
description = "Dagster pipeline for PDF to Markdown conversion using Docling Granite VLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster",
    "dagster-webserver",
    "docling",
    "pymupdf",
]

[tool.setuptools]
packages = ["pdf2md_pipeline"]

[tool.dagster]
module_name = "pdf2md_pipeline.definitions"
